test/compile_errors/lib/issue57/no_import_helper.w
pub type TypeId = i32
